--- a/pages/components/GameBoard/GameBoard.module.scss
+++ b/pages/components/GameBoard/GameBoard.module.scss
@@ -1,9 +1,15 @@
 .title {
   color: purple;
 }
-.gameRow {
+
+.gameBoard {
+  margin: 20px auto;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .gameCell {
   width: 50px;
   height: 50px;
