--- a/pages/components/GameRow/GameRow.module.scss
+++ b/pages/components/GameRow/GameRow.module.scss
@@ -1,4 +1,9 @@
-
 .gameRow {
   display: flex;
+
+  &:nth-child(5n) {
+    &:not(:last-child) {
+      border-bottom: 3px solid black;
+    }
+  }
 }
