--- a/pages/components/Game/Game.module.scss
+++ b/pages/components/Game/Game.module.scss
@@ -1,8 +1,6 @@
-.gameBoard {
-  margin: 50px auto;
+.gameCnt {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
-
