--- a/pages/components/GameCell/GameCell.module.scss
+++ b/pages/components/GameCell/GameCell.module.scss
@@ -11,6 +11,11 @@
       border-right: 3px solid black;
     }
   }
+
+  @media screen and (max-width: 767.9px) {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .filled {
@@ -28,5 +33,10 @@
     width: 100%;
     margin: auto;
     display: block;
+  }
+
+  @media screen and (max-width: 767.9px) {
+    font-size: 21px;
+    line-height: 25px;
   }
 }
