--- a/pages/components/HintCol/HintCol.module.scss
+++ b/pages/components/HintCol/HintCol.module.scss
@@ -1,10 +1,24 @@
 .HintCol {
-    width: 52px;
-    height: 52px;
-  
-    &:nth-child(5n){
-      &:not(:last-child){
-        margin-right: 3px;
-      }
+  width: 52px;
+  height: 52px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  line-height: 21px;
+
+  &:nth-child(5n) {
+    &:not(:last-child) {
+      margin-right: 3px;
     }
+  }
+
+  @media screen and (max-width: 767.9px) {
+    width: 27px;
+    height: 2px;
+    line-height: 16px;
+  }
+}
+
+.inner {
+  width: 1em;
 }
