--- a/pages/components/HintRow/HintRow.module.scss
+++ b/pages/components/HintRow/HintRow.module.scss
@@ -1,11 +1,22 @@
 .HintRow {
-    width: 52px;
-    height: 52px;
-    line-height: 52px;
-  
-    &:nth-child(5n){
-      &:not(:last-child){
-        margin-bottom: 3px;
-      }
+  width: 52px;
+  height: 52px;
+  line-height: 52px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 6px;
+
+  &:nth-child(5n) {
+    &:not(:last-child) {
+      margin-right: 3px;
+      margin-bottom: 3px;
     }
+  }
+
+  @media screen and (max-width: 767.9px) {
+    width: 26px;
+    height: 26px;
+    line-height: 26px;
+  }
 }
