--- a/pages/components/GameCell/GameCell.module.scss
+++ b/pages/components/GameCell/GameCell.module.scss
@@ -1,4 +1,3 @@
-
 .gameCell {
   width: 50px;
   height: 50px;
@@ -6,8 +5,8 @@
   border: 1px solid black;
   margin-bottom: -1px;
 
-  &:nth-child(5n){
-    &:not(:last-child){
+  &:nth-child(5n) {
+    &:not(:last-child) {
       border-right: 3px solid black;
     }
   }
@@ -26,17 +25,16 @@
   &:after {
     content: "X";
     color: black;
-    font-family: 'Arial', sans-serif;
+    font-family: "Arial", sans-serif;
     font-size: 42px;
     line-height: 51px;
     text-align: center;
     width: 100%;
     margin: auto;
     display: block;
-  }
-
-  @media screen and (max-width: 767.9px) {
-    font-size: 21px;
-    line-height: 25px;
+    @media screen and (max-width: 767.9px) {
+      font-size: 21px;
+      line-height: 25px;
+    }
   }
 }
