touch toggle support

--- a/pages/components/GameCell/GameCell.module.scss
+++ b/pages/components/GameCell/GameCell.module.scss
@@ -23,10 +23,10 @@
 
 .crossed {
   &:after {
-    content: "X";
+    content: "✕";
     color: black;
     font-family: "Arial", sans-serif;
-    font-size: 42px;
+    font-size: 52px;
     line-height: 51px;
     text-align: center;
     width: 100%;
