--- a/pages/components/Hints/Hints.module.scss
+++ b/pages/components/Hints/Hints.module.scss
@@ -9,6 +9,7 @@
   right: 0;
   text-align: center;
   pointer-events: none;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 
   @media screen and (max-width: 767.9px) {
@@ -30,6 +31,7 @@
   text-align: center;
   pointer-events: none;
   font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 
   @media screen and (max-width: 767.9px) {
     margin-left: -310px;
