--- a/pages/components/GameBoard/GameBoard.module.scss
+++ b/pages/components/GameBoard/GameBoard.module.scss
@@ -1,5 +1,5 @@
 .gameBoard {
-  margin: 50px auto;
+  margin: 60px auto 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -99,7 +99,7 @@ input:checked + .slider:before {
   width: 26px;
   left: 4px;
   bottom: 4px;
-  color: rgb(169, 169, 169);
+  color: rgb(91, 91, 91);
   border-radius: 50%;
   font-family: Arial;
   font-size: 28px;
@@ -108,5 +108,5 @@ input:checked + .slider:before {
 }
 
 input:checked + .slider:after {
-  color: rgb(169, 169, 169);
+  color: rgb(39, 39, 39);
 }
