--- a/pages/components/Hints/Hints.module.scss
+++ b/pages/components/Hints/Hints.module.scss
@@ -24,13 +24,14 @@
   justify-content: center;
   align-items: center;
   width: 52px;
-  margin-top: 50px;
+  margin-top: 61px;
   margin-left: -580px;
   position: absolute;
   top: 0;
   text-align: center;
   pointer-events: none;
   font-size: 16px;
+  word-spacing: 3px;
   font-family: Arial, Helvetica, sans-serif;
 
   @media screen and (max-width: 767.9px) {
