--- a/pages/components/GameBoard/GameBoard.module.scss
+++ b/pages/components/GameBoard/GameBoard.module.scss
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+.puzzleNum {
+  margin-top: 0;
+  font-size: 24px;
+}
+
 .buttons {
   display: flex;
 
@@ -72,7 +77,6 @@
   background-color: white;
   transition: 0.4s;
   border-radius: 50%;
-  font-family: Arial;
   font-size: 28px;
   text-align: center;
   line-height: 26px;
@@ -101,7 +105,6 @@ input:checked + .slider:before {
   bottom: 4px;
   color: rgb(91, 91, 91);
   border-radius: 50%;
-  font-family: Arial;
   font-size: 28px;
   text-align: center;
   line-height: 26px;
