--- a/pages/components/GameBoard/GameBoard.module.scss
+++ b/pages/components/GameBoard/GameBoard.module.scss
@@ -15,6 +15,7 @@
 .solved {
   &::after {
     content: "✔️";
+    color: rgb(0, 255, 0);
     position: absolute;
     right: -40px;
     top: -3px;
@@ -23,47 +24,45 @@
 
 .buttons {
   display: flex;
+  align-items: center;
+  margin-bottom: 30px;
 
   button{
     font-size: 20px;
+    line-height: 26px;
 
     @media screen and (max-width: 767.9px) {
       font-size: 16px;
+      line-height: 26px;
   
     }
 
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-right: 30px;
 
       @media screen and (max-width: 767.9px) {
-        margin-right: 10px;
+        margin-right: 15px;
       }
     }
   }
 }
 
-/* The switch - the box around the slider */
 .switch {
   position: relative;
-  // display: none;
   width: 60px;
   height: 34px;
-  margin-top: 20px;
-
   
   @media screen and (max-width: 767.9px) {
     display: block;
   }
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
