--- a/pages/components/GameBoard/GameBoard.module.scss
+++ b/pages/components/GameBoard/GameBoard.module.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  
+  @media screen and (max-width: 767.9px) {
+    margin-top: 60px;
+  }
 }
 
 .puzzleNum {
