--- a/pages/components/Hints/Hints.module.scss
+++ b/pages/components/Hints/Hints.module.scss
@@ -33,6 +33,7 @@
   word-spacing: 3px;
 
   @media screen and (max-width: 767.9px) {
+    margin-top: 61px;
     margin-left: -310px;
     font-size: 10px;
     width: 26px;
