Mobile CSS adjustment

--- a/pages/components/Hints/Hints.module.scss
+++ b/pages/components/Hints/Hints.module.scss
@@ -13,6 +13,7 @@
 
   @media screen and (max-width: 767.9px) {
     top: 35px;
+    left: 25px;
     font-size: 10px;
   }
 }
@@ -34,7 +35,7 @@
 
   @media screen and (max-width: 767.9px) {
     margin-top: 61px;
-    margin-left: -310px;
+    margin-left: -285px;
     font-size: 10px;
     width: 26px;
   }
