--- a/pages/components/Nonogram/Game/Game.module.scss
+++ b/pages/components/Nonogram/Game/Game.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 30px;
+  padding-top: 30px;
   touch-action: none;
   font-family: 'Roboto', sans-serif;
 }
