--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -4,6 +4,8 @@ $sidebarWidth: 200px;
   display: flex;
   align-items: flex-start;
   position: fixed;
+  top: 0;
+  height: 50px;
   right: -1 * $sidebarWidth;
   transition: 0.3s ease-out;
   z-index: 99;
@@ -27,8 +29,9 @@ $sidebarWidth: 200px;
 
 .iconCnt {
   font-size: 38px;
-  width: 40px;
+  width: 45px;
   cursor: pointer;
+  padding-top: 5px;
   padding-left: 10px;
   text-align: left;
 }
@@ -64,6 +67,7 @@ $sidebarWidth: 200px;
 
 .screen {
   position: fixed;
+  top: 0;
   width: 100%;
   height: 100%;
   display: none;
