--- a/components/Nonogram/GameBoard/GameBoard.module.scss
+++ b/components/Nonogram/GameBoard/GameBoard.module.scss
@@ -1,14 +1,43 @@
 .gameBoard {
+  cursor: pointer;
   margin: 80px auto 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding: 1px;
+  overflow: hidden;
 
-  
   @media screen and (max-width: 767.9px) {
     margin-top: 60px;
   }
+}
+
+.solvedBoard {
+  cursor: default;
+  
+  &:after {
+  content:'';
+  pointer-events: none;
+  top:0;
+  left: 0;
+	transform:translateX(0%);
+	width:100%;
+	height:100%;
+	position: absolute;
+	z-index:1;
+	animation: shine 3s infinite;
+	// background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%);
+  background: linear-gradient(to right, rgba(255, 255,255,0) 0%,rgba(255, 255, 255, 0.2) 50%,rgba(255, 255,255,0) 62%,rgba(255, 255,255,0) 100%);
+}
+}
+
+/* animation */
+
+@keyframes shine {
+	0% {transform:translateX(-150%);}
+	100% {transform:translateX(150%);}
 }
 
 .puzzleNum {
@@ -18,7 +47,7 @@
   position: relative;
 }
 
-.solved {
+.solvedNum {
   &::after {
     content: "✔️";
     color: rgb(0, 255, 0);
@@ -33,14 +62,13 @@
   align-items: center;
   margin-bottom: 30px;
 
-  button{
+  button {
     font-size: 20px;
     line-height: 26px;
 
     @media screen and (max-width: 767.9px) {
       font-size: 16px;
       line-height: 26px;
-  
     }
 
     &:not(:last-child) {
@@ -57,7 +85,7 @@
   position: relative;
   width: 60px;
   height: 34px;
-  
+
   @media screen and (max-width: 767.9px) {
     display: block;
   }
@@ -77,8 +105,8 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 34px;
 }
 
