--- a/components/Nonogram/GameBoard/GameBoard.module.scss
+++ b/components/Nonogram/GameBoard/GameBoard.module.scss
@@ -49,7 +49,7 @@
 
 .solvedNum {
   &::after {
-    content: "✔️";
+    content: "✅";
     color: rgb(0, 255, 0);
     position: absolute;
     right: -40px;
@@ -63,6 +63,7 @@
   margin-bottom: 30px;
 
   button {
+    cursor: pointer;
     font-size: 20px;
     line-height: 26px;
 
